--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- P stands for paragraph -->
         <p>This is just a test, and it looks like it is working!</p>
 
-        <footer>CS3041: Human-Computer Interaction &copy; 2021</footer>
+        <footer>CS3041: Human-Computer Interaction l Lab 0 &copy; 2021</footer>
     </div>
 </body>
 
